--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>圈小猫小游戏</title>
+  <title>Catch the cat</title>
   <script src="./js/phaser.min.js"></script>
   <script src="./js/catch-the-cat.js"></script>
   <style>
