--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <title>Catch the cat</title>
   <script src="./js/phaser.min.js"></script>
   <script src="./js/catch-the-cat.js"></script>
@@ -14,6 +15,9 @@
 </head>
 <body>
   <div id="catch-the-cat"></div>
+  <div id="netlify-svg">
+      <a href="https://app.netlify.com"><img src="https://api.netlify.com/api/v1/badges/326eee6d-6437-4073-9aaf-a14b9665380c/deploy-status" alt="" style="max-height:20px;display:block;margin:0 auto"></a>
+</div>
 </body>
 <script>
   window.game = new CatchTheCatGame({
