--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=2.0, minimum-scale=3.0, maximum-scale=5.0, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=0.8, maximum-scale=5.0, user-scalable=yes"/>
   <title>Catch the cat</title>
   <script src="./js/phaser.min.js"></script>
   <script src="./js/catch-the-cat.js"></script>
